--- a/MarvinsAIRARefactored.csproj
+++ b/MarvinsAIRARefactored.csproj
@@ -77,6 +77,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\IRSDKSharper\IRSDKSharper.csproj" />
+    <ProjectReference Include="..\SimagicHPR\SimagicHPR.csproj" />
   </ItemGroup>
 
   <ItemGroup>
