--- a/MarvinsAIRARefactored.csproj
+++ b/MarvinsAIRARefactored.csproj
@@ -77,11 +77,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SharpDX.DirectInput" Version="4.2.0" />
-    <PackageReference Include="System.IO.Ports" Version="9.0.5" />
-    <PackageReference Include="System.Management" Version="9.0.5" />
-    <PackageReference Include="System.Windows.Extensions" Version="9.0.5" />
+    <PackageReference Include="System.IO.Ports" Version="9.0.6" />
+    <PackageReference Include="System.Management" Version="9.0.6" />
+    <PackageReference Include="System.Windows.Extensions" Version="9.0.6" />
   </ItemGroup>
 
   <ItemGroup>
