Updates to AdminBoxx and AudioManager

--- a/MarvinsAIRARefactored.csproj
+++ b/MarvinsAIRARefactored.csproj
@@ -78,6 +78,9 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="PInvoke.Kernel32" Version="0.7.124" />
+    <PackageReference Include="PInvoke.SetupApi" Version="0.7.124" />
+    <PackageReference Include="PInvoke.User32" Version="0.7.124" />
     <PackageReference Include="SharpDX.DirectInput" Version="4.2.0" />
     <PackageReference Include="SharpDX.XAudio2" Version="4.2.0" />
     <PackageReference Include="System.IO.Ports" Version="9.0.6" />
